Added save button for mobile I don't know if saving works on mobile but I don't care. Also added loading
Added save button for mobile I don't know if saving works on mobile but I don't care. Also added loading

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <div class="sectionFooter">
                 <h5>Ant Clicker | Bunker explorer 2000#7500 on Discord</h5>
                 <h5>Auto saves every 30 seconds | Ctrl + S to manually save</h5>
+                <h5>or click button below</h5>
+                <button onclick="saveGame();">Save Game</button>
                 <button onclick="resetGame();">Reset Game</button>
             </div>
         </div>
