--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</table>
 	</div>
 
-	<button>Send IP Address</button>
+	<button onclick="ipconfirm()">Send IP Address</button>
 	
 
 </body>
@@ -51,6 +51,10 @@
 			var RedButton = "Red Font Color (600 seconds) ❌"
 			
 			var r = document.querySelector('h1');
+
+			function ipconfirm(){
+				alert("yu dsyure you wan tto send tme that IP bro???")
+			}
 
 			setInterval(function(){
                 time = time + 1;
