--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="index.css">
 
 	<title>wait</title>
+
+	<link rel="stylesheet" href="index.css">
+	
 </head>
 
 <body>
