--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 
 	<link rel="stylesheet" href="index.css">
 
-	<title>wait</title>
+	<title>hello</title>
 	
 </head>
 
 <body>
 
-	<h1>loading...</h1>
+	<h1>bunkerexplorer's corner of the internet</h1>
 
 </body>
 
-
+<footer style="margin-top:11%; margin-left:45%; font-size: 9;">theres nothing here btw</footer>
 
 </html>
