--- a/index.html
+++ b/index.html
@@ -5,16 +5,36 @@
 
 	<link rel="stylesheet" href="index.css">
 
-	<title>hello</title>
+	<title>bunkerexplorer's corner of the internet</title>
 	
 </head>
 
 <body>
 
-	<h1>bunkerexplorer's corner of the internet</h1>
+		<div class="header">
+			<h3>bunkerexplorer's corner of the internet</h3>
+		</div>
+
+		<div class="box">
+			<h1>Image test!!</h1>
+			<h3>Nov 3, 2021 | 9:35pm</h3>
+			<img src="assets/images/cat.gif">
+			<p>I wonder if this will work. yeah it worked</p>
+		</div>
+
+		<div class="box">
+			<h1>I can just paste in boxes.</h1>
+			<h3>Nov 3, 2021 | 9:31pm</h3>
+			<p>Pasting in boxes is easy but having the ability to post from the website would be easier. I'm not that smart, probably won't happen.</p>
+		</div>
+
+		<div class="box">
+			<h1>My corner of the internet?!</h1>
+			<h3>Nov 3, 2021 | 9:30pm</h3>
+			<p>This is...</p>
+			<p>my corner of the internet. OKAY.</p>
+		</div>
 
 </body>
-
-<footer style="margin-top:11%; margin-left:45%; font-size: 9;">theres nothing here btw</footer>
 
 </html>
