--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
 		<div class="box">
 			<h1>Image test!!</h1>
+			<h3>Nov 3, 2021 | 10:03pm</h3>
+			<p>Just finished breaking bad, feeling based.</p>
+		</div>
+
+		<div class="box">
+			<h1>Image test!!</h1>
 			<h3>Nov 3, 2021 | 9:35pm</h3>
 			<img src="assets/images/cat.gif">
 			<p>I wonder if this will work. yeah it worked</p>
