--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta content="bunkerexplorer's corner of internet!!!" property="og:description" />
     <meta content="https://bunkerexplorer.com/" property="og:url" />
     <meta content="https://cdn.discordapp.com/attachments/872636360358510643/905637837846740992/trollage.jpg" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
 	
 </head>
 
@@ -22,7 +22,20 @@
 		</div>
 
 		<div class="box">
-			<h1>Image test!!</h1>
+			<h1>Some updates</h1>
+			<h3>Nov 4, 2021 | 5:27pm</h3>
+			<img src="assets/images/therockmacncheese.png" style="width: 75%;">
+			<p>I've added a footer w/ contact information. As well as figured out how to use inline CSS to resize images so they fit without any issues (on my screen, at least). Image attached above to further test it.</p>
+		</div>
+
+		<div class="box">
+			<h1>Just started a new show</h1>
+			<h3>Nov 4, 2021 | 4:00pm</h3>
+			<p>Better call saul has a spin-off show w/ breaking bad. Before I watch "El Camino", the breaking bad movie, I will watch BCS. And I thought I was done wasting time binging shows!</p>
+		</div>
+
+		<div class="box">
+			<h1>I am not based, I AM the based.</h1>
 			<h3>Nov 3, 2021 | 10:03pm</h3>
 			<p>Just finished breaking bad, feeling based.</p>
 		</div>
@@ -30,7 +43,7 @@
 		<div class="box">
 			<h1>Image test!!</h1>
 			<h3>Nov 3, 2021 | 9:35pm</h3>
-			<img src="assets/images/cat.gif">
+			<img src="assets/images/cat.gif" style="width: 75%;">
 			<p>I wonder if this will work. yeah it worked</p>
 		</div>
 
@@ -46,6 +59,13 @@
 			<p>This is...</p>
 			<p>my corner of the internet. OKAY.</p>
 		</div>
+
+
+
+		<div class="footer">
+			<h3><em>Contact: Bunker explorer 2000#7500</em></h3>
+		</div>
+
 
 </body>
 
