--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
 
 		<div class="header">
 			<h3>bunkerexplorer's corner of the internet</h3>
+			<div class="nav">
+				<nav>
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Updates</a></li>
+						<li><a href="assets/images/ant.png">Troll</a></li>
+					  </ul>
+				</nav>
+			</div>
 		</div>
 
 		<div class="box">
 			<h1>Some updates</h1>
 			<h3>Nov 4, 2021 | 5:27pm</h3>
-			<img src="assets/images/therockmacncheese.png" style="width: 75%;">
+			<img src="assets/images/nest.png" style="width: 75%;">
 			<p>I've added a footer w/ contact information. As well as figured out how to use inline CSS to resize images so they fit without any issues (on my screen, at least). Image attached above to further test it.</p>
 		</div>
 
