--- a/index.html
+++ b/index.html
@@ -17,57 +17,18 @@
 
 <body>
 
-		<div class="header">
-			<h3>bunkerexplorer's corner of the internet</h3>
-			<div class="nav">
-				<nav>
-					<ul>
-						<li><a href="home.html">Home</a></li>
-						<li><a href="index.html">Updates</a></li>
-						<li><a href="assets/images/ant.png">Troll</a></li>
-					  </ul>
-				</nav>
-			</div>
-		</div>
-
-		<div class="box">
-			<h1>Some updates</h1>
-			<h3>Nov 4, 2021 | 5:27pm</h3>
-			<img src="assets/images/nest.png" style="width: 75%;">
-			<p>I've added a footer w/ contact information. As well as figured out how to use inline CSS to resize images so they fit without any issues (on my screen, at least). Image attached above to further test it.</p>
-		</div>
-
-		<div class="box">
-			<h1>Just started a new show</h1>
-			<h3>Nov 4, 2021 | 4:00pm</h3>
-			<p>Better call saul has a spin-off show w/ breaking bad. Before I watch "El Camino", the breaking bad movie, I will watch BCS. And I thought I was done wasting time binging shows!</p>
-		</div>
-
-		<div class="box">
-			<h1>I am not based, I AM the based.</h1>
-			<h3>Nov 3, 2021 | 10:03pm</h3>
-			<p>Just finished breaking bad, feeling based.</p>
-		</div>
-
-		<div class="box">
-			<h1>Image test!!</h1>
-			<h3>Nov 3, 2021 | 9:35pm</h3>
-			<img src="assets/images/cat.gif" style="width: 75%;">
-			<p>I wonder if this will work. yeah it worked</p>
-		</div>
-
-		<div class="box">
-			<h1>I can just paste in boxes.</h1>
-			<h3>Nov 3, 2021 | 9:31pm</h3>
-			<p>Pasting in boxes is easy but having the ability to post from the website would be easier. I'm not that smart, probably won't happen.</p>
-		</div>
-
-		<div class="box">
-			<h1>My corner of the internet?!</h1>
-			<h3>Nov 3, 2021 | 9:30pm</h3>
-			<p>This is...</p>
-			<p>my corner of the internet. OKAY.</p>
-		</div>
+        <div class="header">
+            <h3>bunkerexplorer's corner of the internet</h3>
+            <div class="nav">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="updates.html">Updates</a></li>
+                        <li><a href="assets/images/ant.png">Troll</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
 
 
@@ -79,3 +40,4 @@
 </body>
 
 </html>
+
