--- a/updates.html
+++ b/updates.html
@@ -24,10 +24,23 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="updates.html">Updates</a></li>
-						<li><a href="assets/images/ant.png">Troll</a></li>
+						<li><a href="assets/images/trollinthehall.png">Troll</a></li>
 					  </ul>
 				</nav>
 			</div>
+		</div>
+
+		<div class="box">
+			<h1>Nav Bar</h1>
+			<h3>Nov 5, 2021 | 10:56pm</h3>
+			<p>I've added a Nav-Bar! And a few pages... I've renamed this page to updates so home can be index. And I've also added a little troll button... ahahahahaha don't click it. please don';t clcike it please for me dont lcick it</p>
+		</div>
+
+		<div class="box">
+			<h1>Some updates</h1>
+			<h3>Nov 4, 2021 | 5:27pm</h3>
+			<img src="assets/images/nest.png" style="width: 75%;">
+			<p>I've added a footer w/ contact information. As well as figured out how to use inline CSS to resize images so they fit without any issues (on my screen, at least). Image attached above to further test it.</p>
 		</div>
 
 		<div class="box">
