--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
             </div>
         </div>
 
-
+        <div class="main_box">
+			<h1>Welcome to my webpage!</h1>
+			<h3>"I am an extremely non-feminine sigma male" -bunker</h3>
+			<img src="assets/images/Trollface_non-free.png" style="width: 50%;">
+			<p>I feel like this image represents me as a person, so I've chosen it as the symbol of this page. I feel like I can really connect with this troll face on a spiritual and emotional level. I dream about this face every night, each night it slowly transforms into something more distorted and holy.</p>
+		</div>
 
 		<div class="footer">
 			<h3><em>Contact: Bunker explorer 2000#7500</em></h3>
