--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,12 @@
 		</div>
 
 		<div class="box">
+			<h1>Synapse X Paradox</h1>
+			<h3>Nov 5, 2021 | 11:03pm</h3>
+			<p>Did you know if you had $100,000, you could buy 5,000 copies of Synapse X? Fascinating.</p>
+		</div>
+
+		<div class="box">
 			<h1>Nav Bar</h1>
 			<h3>Nov 5, 2021 | 10:56pm</h3>
 			<p>I've added a Nav-Bar! And a few pages... I've renamed this page to updates so home can be index. And I've also added a little troll button... ahahahahaha don't click it. please don';t clcike it please for me dont lcick it</p>
