UN goofy update.........
this is not goofy

--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,12 @@
 		</div>
 
 		<div class="box">
+			<h1>I am working on essaies</h1>
+			<h3>Nov 6, 2021 | 1:18pm</h3>
+			<p>its about nationalism basically uniting into nation states apart from empires literally ruined the empires lifes and made war happen (sad) (bad) (un goofy)</p>
+		</div>
+
+		<div class="box">
 			<h1>Synapse X Paradox</h1>
 			<h3>Nov 5, 2021 | 11:03pm</h3>
 			<p>Did you know if you had $100,000, you could buy 5,000 copies of Synapse X? Fascinating.</p>
