--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,12 @@
 		</div>
 
 		<div class="box">
+			<h1>Thesis statement done</h1>
+			<h3>Nov 6, 2021 | 7:34pm</h3>
+			<p>	Evaluating the statements I’ve been given, Nationalism in the 19th century united people into nation states separate from empires/other nations, resulting in war and the collapse of many empires. This is because the people who were in those empires split from them, uniting to make their own nation. Basically, during this time period people were inspired to break apart from existing empires because of the government and unite with other like minded people to create a new sovereign political nation. Something that inspired people to do this is being prideful in their nation. After looking over the documents, I’ve noticed a very common thing. There are many things that result from nationalism, but it can be summarized into one easy statement. Uniting into separate nation states came with a cost, many empires fell and war broke out among them because of this.</p>
+		</div>
+
+		<div class="box">
 			<h1>I am working on essaies</h1>
 			<h3>Nov 6, 2021 | 1:18pm</h3>
 			<p>its about nationalism basically uniting into nation states apart from empires literally ruined the empires lifes and made war happen (sad) (bad) (un goofy)</p>
