--- a/updates.html
+++ b/updates.html
@@ -18,6 +18,7 @@
 <body>
 
 		<div class="header">
+			<img src="assets/images/bunker.png" style="width: 10%;">
 			<h3>bunkerexplorer's corner of the internet</h3>
 			<div class="nav">
 				<nav>
@@ -97,6 +98,13 @@
 
 		<div class="footer">
 			<h3><em>Contact: Bunker explorer 2000#7500</em></h3>
+			<div class="links">
+				<a href="https://github.com/bunkerexplorer2000/bunkerexplorer" target="_blank"><img src="assets/images/github.png" style="width: 5%;"></a>
+				<a href="https://www.youtube.com/channel/UCZptCyhkchaIB-VqvfPi4Hw" target="_blank"><img src="assets/images/youtube.png" style="width: 5%;"></a>
+				<a href="https://www.bunkerexplorer.com/index.html" target="_blank"><img src="assets/images/bunker.png" style="width: 5%;"></a>
+			</div>
+
+			
 		</div>
 
 
