added the BUNKERPEDIA!!
added the BUNKERPEDIA!!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="updates.html">Updates</a></li>
-                        <li><a href="assets/images/ant.png">Troll</a></li>
+                        <li><a href="pedia.html">Pedia</a></li>
                     </ul>
                 </nav>
             </div>
