--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,7 @@
 	<title>bunkerexplorer's corner of the internet</title>
 	
 	<meta content="bunkerexplorer" property="og:title" />
-    <meta content="bunkerexplorer's corner of internet!!!" property="og:description" />
+    <meta content="bunkerexplorer's updates..." property="og:description" />
     <meta content="https://bunkerexplorer.com/" property="og:url" />
     <meta content="https://cdn.discordapp.com/attachments/872636360358510643/905637837846740992/trollage.jpg" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
@@ -25,10 +25,16 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="updates.html">Updates</a></li>
-						<li><a href="assets/images/trollinthehall.png">Troll</a></li>
+						<li><a href="pedia.html">Pedia</a></li>
 					  </ul>
 				</nav>
 			</div>
+		</div>
+
+		<div class="box">
+			<h1>Bunkerpedia Founded</h1>
+			<h3>Nov 18th, 2021 | 5:29pm</h3>
+			<p>For more web design practice I've made BUNKERPEDIA! It is a completely useless page I will be adding to the NAVBAR of this site. Also I've removed the "<a href="assets/images/trollinthehall.png" target="_blank">troll</a>" from the navbar.</p>
 		</div>
 
 		<div class="box">
