Updates to my pedia about something I LOVE
Updates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVEUpdates to my pedia about something I LOVE

--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,22 @@
 				</nav>
 			</div>
 		</div>
+		
+		<div class="box">
+			<h1>Onion Links</h1>
+			<h3>Nov 18th, 2021 | 7:52pm</h3>
+			<p>I am looking into getting an onion domain. Probably won't happen *anytime soon* because I need more money for hosting on cloud services, and the domain itself. But just think about it: bunkerexplorer on the darkweb! It would be extremely goofy, I think. Bunker explorer, on every surface of the internet! Wacky.</p>
+		</div>
+
+		<div class="box">
+			<h1>Expirementation</h1>
+			<h3>Nov 18th, 2021 | 7:45pm</h3>
+			<p><u>Updates:</u></p>
+			<p>• Bunkerpedia added</p>  
+			<p>• Hidden Troll Button</p>  
+			<p>• Rick Astly Troll Button</p>  
+			<p>• Found out how to get bullet points</p>
+		</div>
 
 		<div class="box">
 			<h1>Bunkerpedia Founded</h1>
@@ -83,7 +99,7 @@
 		<div class="box">
 			<h1>Image test!!</h1>
 			<h3>Nov 3, 2021 | 9:35pm</h3>
-			<img src="assets/images/cat.gif" style="width: 75%;">
+			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="assets/images/cat.gif" style="width: 75%;"></a>
 			<p>I wonder if this will work. yeah it worked</p>
 		</div>
 
