a couple miniscule updates
a couple miniscule updates

--- a/pedia.html
+++ b/pedia.html
@@ -63,7 +63,7 @@
 				<h1 class="title">TOR</h1>
 				<div class="linediv"></div>
 				<a href="https://en.wikipedia.org/wiki/Onion_routing" target="_blank"><img src="assets/images/pedia/onionrelay.jpg" style="width: 20%; float: right;"></a>
-				<p class="message"><a href="https://en.wikipedia.org/wiki/Tor_(network)" target="_blank">TOR</a>, short for "The Onion Router", is a free an open source software for enabling anonymous communication (Wikipedia). It directs your internet traffic through an overlay network. This means a network, that is layered ontop of another network. Like an onion has layers, hence the name Onion Router. It takes your traffic and throws it through numerous TOR relays around the world (there are about six thousand in existance) and then to the website. This makes it much harder (not impossible) to track your your location and usage of websites. While it's not impossible it's extremely hard if the proper saftey precautions are taken. (May have issues as I am not an expert on the topic)</p>
+				<p class="message"><a href="https://en.wikipedia.org/wiki/Tor_(network)" target="_blank">TOR</a>, short for "The Onion Router", is a free an open source software for enabling anonymous communication (Wikipedia). It directs your internet traffic through an overlay network. This means a network, that is layered ontop of another network. Like an onion has layers, hence the name Onion Router. It takes your traffic and throws it through numerous TOR relays around the world (there are about six thousand in existance) and then to the website. This makes it much harder (not impossible) to track your your location and usage of websites. While it's not impossible it's extremely hard if the proper saftey precautions are taken. (May have issues; as I am not an expert on the topic)</p>
 				
 
 				<div id="darkweb", class="content">
@@ -75,7 +75,7 @@
 				<div id="tailsos", class="content">
 					<h2 class="title">Tails OS</h2>
 					<div class="linediv"></div>
-					<p class="message">Tails OS is based off of Debian Linux. It was built to protect against surveillance and censorship. It comes with the TOR browser, and various other useful software. It's biggest perk of course, is the fact that it is portable. "<a href="https://tails.boum.org" target="_blank">Tails</a>includes a selection of applications to work on sensitive documents and communicate securely. Everything in Tails is ready-to-use and has safe defaults" (Tails). If you're going to browse the dark web, I would recommend using Tails OS. It works perfectly fine, and is just another layer of security. You can of course use Windows, base Linux, etc; But Tails is all the more secure, and it comes with all the tools necessary and more.</p>
+					<p class="message">Tails OS is based off of Debian Linux. It was built to protect against surveillance and censorship. It comes with the TOR browser, and various other useful software. It's biggest perk of course, is the fact that it is portable. "<a href="https://tails.boum.org" target="_blank">Tails</a> includes a selection of applications to work on sensitive documents and communicate securely. Everything in Tails is ready-to-use and has safe defaults" (Tails). If you're going to browse the dark web, I would recommend using Tails OS. It works perfectly fine, and is just another layer of security. You can of course use Windows, base Linux, etc; But Tails is all the more secure, and it comes with all the tools necessary and more.</p>
 				</div>
 
 			</div>
