--- a/updates.html
+++ b/updates.html
@@ -34,23 +34,15 @@
 		<div class="box">
 			<h1>Onion Links</h1>
 			<h3>Nov 18th, 2021 | 7:52pm</h3>
-			<p>I am looking into getting an onion domain. Probably won't happen *anytime soon* because I need more money for hosting on cloud services, and the domain itself. But just think about it: bunkerexplorer on the darkweb! It would be extremely goofy, I think. Bunker explorer, on every surface of the internet! Wacky.</p>
-		</div>
-
-		<div class="box">
-			<h1>Expirementation</h1>
-			<h3>Nov 18th, 2021 | 7:45pm</h3>
-			<p><u>Updates:</u></p>
-			<p>• Bunkerpedia added</p>  
-			<p>• Hidden Troll Button</p>  
-			<p>• Rick Astly Troll Button</p>  
-			<p>• Found out how to get bullet points</p>
+			<p>I am looking into getting an onion domain. Probably won't happen *anytime soon* because I need more money for hosting on cloud services, and the domain itself. But just think about it: bunkerexplorer on the darkweb! It would be extremely goofy, I think. Bunker explorer, on every surface of the internet!</p>
+			<br>
+			<p>If you don't know anything about this and would like to learn you can visit my <a href="https://bunkerexplorer.com/pedia.html" target="_blank" style="color:cyan;">pedia</a> where I have talked about TOR, onion routing, and more.</p>
 		</div>
 
 		<div class="box">
 			<h1>Bunkerpedia Founded</h1>
 			<h3>Nov 18th, 2021 | 5:29pm</h3>
-			<p>For more web design practice I've made BUNKERPEDIA! It is a completely useless page I will be adding to the NAVBAR of this site. Also I've removed the "<a href="assets/images/trollinthehall.png" target="_blank">troll</a>" from the navbar.</p>
+			<p>For more web design practice I've made BUNKERPEDIA! It is a completely useless page I will be adding to the NAVBAR of this site. Also I've removed the "<a href="assets/images/trollinthehall.png" target="_blank">troll</a>" from the navbar. Also, the Bunkerpedia is sort of like this updates thing, only more random. This is SOMEWHAT random, but I just felt like making a pedia, so I DID.</p>
 		</div>
 
 		<div class="box">
