Hackey Sacks Def Added to pedia
Hackey Sacks Def Added to pediaHackey Sacks Def Added to pediaHackey Sacks Def Added to pediaHackey Sacks Def Added to pediaHackey Sacks Def Added to pediaHackey Sacks Def Added to pedia

--- a/pedia.html
+++ b/pedia.html
@@ -25,10 +25,11 @@
 					<p>1. <a href="#intro">Introduction</a></p>
 					<p style="margin-left: 30px;">1.2. <a href="#warning">Warning</a></p>
 					<p style="margin-left: 30px;">1.3. <a href="#mainsite">Main Site</a></p>
-					<p>2. <a href="#jrotcop">JROTC Opinions</a></p>
-					<p>3. <a href="#tor">TOR</a></p>
-					<p style="margin-left: 30px;">3.1. <a href="#darkweb">Dark Web</a></p>
-					<p style="margin-left: 30px;">3.2. <a href="#tailsos">Tails OS</a></p>
+					<p>2. <a href="#hackeysack">Hackey Sack</a></p>
+					<p>3. <a href="#jrotcop">JROTC Opinions</a></p>
+					<p>4. <a href="#tor">TOR</a></p>
+					<p style="margin-left: 30px;">4.1. <a href="#darkweb">Dark Web</a></p>
+					<p style="margin-left: 30px;">4.2. <a href="#tailsos">Tails OS</a></p>
 				</div>
 			</center>
 		</div>
@@ -51,6 +52,12 @@
 					<div class="linediv"></div>
 					<p class="message">The main website can be accessed by selecting the link found in the top right of this page or <a href="https://bunkerexplorer.com" target="_blank">here</a>. The main site was also developed as web development practice. I intially purchased the <a href="https://bunkerexplorer.com/" target="_blank">bunkerexplorer.com</a> domain for fun as it was cheap. I decided to copy and paste a ton of stuff from a YouTube video onto Github and boom I had a website. I might rebuy the domain next year and continue this if it's just as cheap as a passion project/ portfolio.</p>
 				</div>
+			</div>
+
+			<div id="hackeysack", class="content">
+				<h1 class="title">Hackey Sack</h1>
+				<div class="linediv"></div>
+				<p class="message">Hackey sacks are small bags filled with sand or pellets. "Hackey Sacks" got its name in 1970, it was initially kicked into the air as part of a competitive game or a display of dexterity (<a href="https://en.wikipedia.org/wiki/Hacky_sack" target="_blank">Wikipedia</a>). Me personally, I use my hackey sack as a "toy" that I throw onto the cieling or wall back and forth. Sort of like a "fidget toy" for me, I guess.</p>
 			</div>
 			
 			<div id="jrotcop", class="content">
