footer links fix
fixed things ahahaa  AFhkj af fF

--- a/updates.html
+++ b/updates.html
@@ -115,7 +115,7 @@
 			<div class="links">
 				<a href="https://github.com/bunkerexplorer2000/bunkerexplorer" target="_blank"><img src="assets/images/github.png" style="width: 5%;"></a>
 				<a href="https://www.youtube.com/channel/UCZptCyhkchaIB-VqvfPi4Hw" target="_blank"><img src="assets/images/youtube.png" style="width: 5%;"></a>
-				<a href="https://www.bunkerexplorer.com/index.html" target="_blank"><img src="assets/images/bunker.png" style="width: 5%;"></a>
+				<a href="https://bunkerexplorer.com" target="_blank"><img src="assets/images/bunker.png" style="width: 5%;"></a>
 			</div>
 
 			
