--- a/pedia.html
+++ b/pedia.html
@@ -27,9 +27,10 @@
 					<p style="margin-left: 30px;">1.3. <a href="#mainsite">Main Site</a></p>
 					<p>2. <a href="#hackeysack">Hackey Sack</a></p>
 					<p>3. <a href="#jrotcop">JROTC Opinions</a></p>
-					<p>4. <a href="#tor">TOR</a></p>
-					<p style="margin-left: 30px;">4.1. <a href="#darkweb">Dark Web</a></p>
-					<p style="margin-left: 30px;">4.2. <a href="#tailsos">Tails OS</a></p>
+					<p>4. <a href="#sx">Synapse X</a></p>
+					<p>5. <a href="#tor">TOR</a></p>
+					<p style="margin-left: 30px;">5.1. <a href="#darkweb">Dark Web</a></p>
+					<p style="margin-left: 30px;">5.2. <a href="#tailsos">Tails OS</a></p>
 				</div>
 			</center>
 		</div>
@@ -66,6 +67,13 @@
 				<p class="message">I do not like the <a href="https://en.wikipedia.org/wiki/Junior_Reserve_Officers%27_Training_Corps" target="_blank">JROTC</a>. The students within said class are exceptionally missbehaved. My personal run ins with them have been horrible. They behave in such an awful manner. I do not support the JROTC because of this.</p>
 			</div>
 
+			<div id="sx", class="content">
+				<h1 class="title">Synapse X</h1>
+				<div class="linediv"></div>
+				<a href="https://https://x.synapse.to/" target="_blank"><img src="assets/images/pedia/sx.png" style="width: 20%; float: right; margin-top: 5px;"></a>
+				<p class="message">Synapse X is the best scripting utility for the game ROBLOX that is on the market and will ever be on the market. I am not biased towards Synapse because I wasted, I mean spent all of my allowance on it and now I have it and nothing else. Synapse X has the BEST functioning features compared to other scripting utilities! It is owned by Synapse Softworks and is used to "exploit" on the game ROBLOX. Fun fact: Did you know, if you had $100,000 you could purchase 5,000 copies of Synapse X. That takes the fact that you're not buying it with BTC/XBT into consideration. Why? Because if you buy with bitcoin it's only $15, in bitcoin of course.</p>
+			</div>
+
 			<div id="tor", class="content">
 				<h1 class="title">TOR</h1>
 				<div class="linediv"></div>
@@ -84,7 +92,6 @@
 					<div class="linediv"></div>
 					<p class="message">Tails OS is based off of Debian Linux. It was built to protect against surveillance and censorship. It comes with the TOR browser, and various other useful software. It's biggest perk of course, is the fact that it is portable. "<a href="https://tails.boum.org" target="_blank">Tails</a> includes a selection of applications to work on sensitive documents and communicate securely. Everything in Tails is ready-to-use and has safe defaults" (Tails). If you're going to browse the dark web, I would recommend using Tails OS. It works perfectly fine, and is just another layer of security. You can of course use Windows, base Linux, etc; But Tails is all the more secure, and it comes with all the tools necessary and more.</p>
 				</div>
-
 			</div>
 
 		</div>
