--- a/updates.html
+++ b/updates.html
@@ -32,6 +32,14 @@
 		</div>
 		
 		<div class="box">
+			<h1>Snake Game</h1>
+			<h3>Nov 21th, 2021 | 10:04pm</h3>
+			<p>I did not make this snake game. It is late and I do not have time to study the art of snake so I can make my own. But I wanted something to do in class on monday on my website so I added a snake game in the navbar. Should work.</p>
+			<br>
+			<p>!!SKIDDED MATERIAL!!</p>
+		</div>
+
+		<div class="box">
 			<h1>Onion Links</h1>
 			<h3>Nov 18th, 2021 | 7:52pm</h3>
 			<p>I am looking into getting an onion domain. Probably won't happen *anytime soon* because I need more money for hosting on cloud services, and the domain itself. But just think about it: bunkerexplorer on the darkweb! It would be extremely goofy, I think. Bunker explorer, on every surface of the internet!</p>
