--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="updates.html">Updates</a></li>
                         <li><a href="pedia.html">Pedia</a></li>
+                        <li><a href="snake.html">Snake</a></li>
                     </ul>
                 </nav>
             </div>
