--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,12 @@
 				</nav>
 			</div>
 		</div>
+
+		<div class="box">
+			<h1>Its been a year</h1>
+			<h3>Jan 19th, 2022 | 8:34pm</h3>
+			<p>It's been a year since my lat post. Since then my s key ha stopped working. It still work obviouly, but ometime it doen't work. You know what I mean? Anyway. Going to be mesing around with this webite ome more.</p>
+		</div>
 		
 		<div class="box">
 			<h1>Snake Game</h1>
