--- a/wavyy.html
+++ b/wavyy.html
@@ -15,7 +15,9 @@
 
 <body>
 
-    <p>empty</p>
+    <h1>anti-wavyy page</h1>
+    <p>wavyy is racist</p>
+    <img src="https://cdn.discordapp.com/avatars/957744595985395793/390312ca3ead2fc74d306e5f157205a6.png?size=4096">
 
 </body>
 
