--- a/meme.html
+++ b/meme.html
@@ -9,7 +9,7 @@
     <meta content="memeoverdose is amazing" property="og:description" />
     <meta content="https://bunkerexplorer.com/" property="og:url" />
     <meta content="https://cdn.discordapp.com/avatars/849255622209830933/1056c45ba31b1661d2d1566e6b404754.png?size=4096" property="og:image" />
-    <meta content="#81634F" data-react-helmet="true" name="theme-color" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
 	
 </head>
 
