--- a/tr0y.html
+++ b/tr0y.html
@@ -15,12 +15,14 @@
 
 <style>
     body{
-        background-color: black;
+        background-image: url("assets/images/trwall.png");
     }
 
     h1, p, h2{
         color: white;
         font-family: Arial, Helvetica, sans-serif;
+        background-color: black;
+        padding-right: 100px;
     }
 </style>
 
