--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <div class="main_box">
 			<h1>Welcome to my webpage!</h1>
-			<h3>"I am an extremely monsterously non-feminine based sigma male" -bunker</h3>
-			<img src="assets/images/Trollface_non-free.png" style="width: 50%;">
-			<p>I feel like this image represents me as a person, so I've chosen it as the symbol of this page. I feel like I can really connect with this troll face on a spiritual and emotional level. I dream about this face every night, each night it slowly transforms into something more distorted and holy. I love the troll face in a way that is not normal. I violently love it. I don't know how to express my love for it in words.</p>
+			<h3>"This website is currently under renovation!</h3>
+			<img src="assets/images/danielle.jpg" style="width: 50%;">
+			<p> </p>
 		</div>
 
 		<div class="footer">
