--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="main_box">
 			<h1>Welcome to my webpage!</h1>
-			<h3>"This website is currently under renovation!</h3>
+			<h3>This website is currently under renovation!</h3>
 			<img src="assets/images/danielle.jpg" style="width: 50%;">
 			<p> </p>
 		</div>
