Add viewport and minor layout/style tweaks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <title>bunkerexplorer's corner of the internet</title>
 	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<meta content="bunkerexplorer" property="og:title" />
     <meta content="bunkerexplorer's corner of internet!!!" property="og:description" />
     <meta content="https://bunkerexplorer.com/" property="og:url" />
@@ -20,7 +21,7 @@
     <div style="display:none;" id="mainDiv" class="animate-bottom">
         <div class="header">
             <img src="assets/images/bunker.png" style="width: 10%;">
-            <h1>bunkerexplorer.com</h1>
+            <p>bunkerexplorer.com<p>
             <div class="nav">
                 <nav>
                     <ul>
