--- a/updates.html
+++ b/updates.html
@@ -5,7 +5,8 @@
 <head>
     <link rel="stylesheet" href="index.css">
     <title>bunkerexplorer's corner of the internet</title>
-	
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<meta content="bunkerexplorer" property="og:title" />
     <meta content="bunkerexplorer's corner of internet!!!" property="og:description" />
     <meta content="https://bunkerexplorer.com/" property="og:url" />
